metadatafullcopy/unpackaged/objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Factor__c</fullName>
        <label>Conversion Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field sets whether or not the material shows up in default display when creating new Material Requisitions</inlineHelpText>
        <label>IsShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measurement__c</fullName>
        <label>Unit of Measurement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All_Materials</fullName>
        <columns>Item_Code__c</columns>
        <columns>NAME</columns>
        <columns>Unit_of_Measurement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>sentinel</value>
        </filters>
        <label>All Materials</label>
    </listViews>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>